--- a/README.Rmd
+++ b/README.Rmd
@@ -35,6 +35,9 @@ You can install `censCov` from github with:
 devtools::install_github("stc04003/censCov")
 ```
 
+### Getting Started
+The package [vignette](https://www.sychiou.com/censCov/index.html) provides a quick demonstration for the basic usage of the main functions.
+
 ### References:
 
   Qian, J., Chiou, S.H., Maye, J.E., Atem, F., Johnson, K.A. and Betensky, R.A. (2018).
