--- a/README.Rmd
+++ b/README.Rmd
@@ -8,6 +8,7 @@ output: github_document
 [![minimal R version](https://img.shields.io/badge/R%3E%3D-3.4.0-6666ff.svg)](https://cran.r-project.org/)
 [![CRAN_Status_Badge](http://www.r-pkg.org/badges/version/reReg)](https://cran.r-project.org/package=reReg)
 [![packageversion](https://img.shields.io/badge/Package%20version-1.0.1-orange.svg?style=flat-square)](commits/master)
+[![Travis-CI Build Status](https://travis-ci.org/stc04003/censCov.svg?branch=master)](https://travis-ci.org/stc04003/censCov)
 [![Last-changedate](https://img.shields.io/badge/last%20change-2019--05--18-yellowgreen.svg)](/commits/master)
 
 ```{r, echo = FALSE}
