--- a/README.Rmd
+++ b/README.Rmd
@@ -9,6 +9,7 @@ output: github_document
 [![CRAN_Status_Badge](http://www.r-pkg.org/badges/version/reReg)](https://cran.r-project.org/package=reReg)
 [![packageversion](https://img.shields.io/badge/Package%20version-1.0.1-orange.svg?style=flat-square)](commits/master)
 [![Travis-CI Build Status](https://travis-ci.org/stc04003/censCov.svg?branch=master)](https://travis-ci.org/stc04003/censCov)
+[![AppVeyor Build Status](https://ci.appveyor.com/api/projects/status/github/stc04003/censCov?branch=master&svg=true)](https://ci.appveyor.com/project/stc04003/censCov)
 [![Last-changedate](https://img.shields.io/badge/last%20change-2019--05--18-yellowgreen.svg)](/commits/master)
 
 ```{r, echo = FALSE}
