--- a/README.Rmd
+++ b/README.Rmd
@@ -6,7 +6,7 @@ output: github_document
 
 [![Project Status: Active – The project has reached a stable, usable state and is being actively developed.](http://www.repostatus.org/badges/latest/active.svg)](http://www.repostatus.org/#active)
 [![minimal R version](https://img.shields.io/badge/R%3E%3D-3.4.0-6666ff.svg)](https://cran.r-project.org/)
-[![CRAN_Status_Badge](http://www.r-pkg.org/badges/version/reReg)](https://cran.r-project.org/package=reReg)
+[![CRAN_Status_Badge](http://www.r-pkg.org/badges/version/censCov)](https://cran.r-project.org/package=censCov)
 [![packageversion](https://img.shields.io/badge/Package%20version-1.0.1-orange.svg?style=flat-square)](commits/master)
 [![Travis-CI Build Status](https://travis-ci.org/stc04003/censCov.svg?branch=master)](https://travis-ci.org/stc04003/censCov)
 [![AppVeyor Build Status](https://ci.appveyor.com/api/projects/status/github/stc04003/censCov?branch=master&svg=true)](https://ci.appveyor.com/project/stc04003/censCov)
